# video-dub

./: .gitignore  CHANGELOG_EMOTION_FEATURE.md  CITATION.bib  LICENSE  OFFLINE.md  README.md  download_models.py  executar.bat  executar.ps1  guia_instalacao.md  main_refactored.py  package-lock.json  pipeline_dublagem.py  pipeline_dublagem_legacy.py  pyproject.toml  requirements.txt  run_app.ps1  run_app.sh  stop_app.sh
backend/: app.py
docs/: BEFORE_AFTER_COMPARISON.md  EMOTION_ANALYSIS.md  EMOTION_QUICKSTART.md
frontend/: package-lock.json
frontend/src/: App.vue  style.css
scripts/: download_models.py  verify_qwen3.py
src/: config.py  download_models.py  main.py  pipeline.py  utils.py
src/backend/: app.py
src/frontend/src/: App.vue
src/services/: audio.py  emotion.py  translation.py  tts.py  video.py  youtube.py
tests/: conftest.py  test_emotion_pipeline.py  test_offline_final.py  test_pipeline.py  test_pipeline_qwen3.py  test_qwen3_offline.py  test_qwen3_offline_doc.py  test_qwen3_quick.py  test_qwen3_simple.py
