[project]
name = "32-21-video-dub"
version = "0.1.0"
description = "Sistema de dublagem automática de vídeos com IA"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Processamento de vídeo e áudio
    "moviepy==2.2.1",
    "librosa==0.10.0",
    "soundfile==0.13.1",
    "imageio-ffmpeg==0.6.0",
    
    # Machine Learning e IA
    "torch==2.6.0",
    "torchaudio==2.6.0",
    "torchvision==0.21.0",
    "transformers>=4.40.0",
    
    # Text-to-Speech
    "tts==0.22.0",
    "kokoro-onnx==0.2.2",
    "onnxruntime-gpu==1.23.2",
    "qwen-tts>=0.0.5",
    # "flash-attn>=2.0.0",  # Opcional: requer torch como build dependency, código tem fallback
    
    # Análise de dados e computação científica
    "numpy==1.26.4",
    "scipy==1.11.4",
    "pandas==1.5.3",
    "scikit-learn==1.7.2",
    
    # Backend e API
    "fastapi==0.128.0",
    "uvicorn[standard]==0.40.0",
    "python-multipart==0.0.21",
    
    # Utilitários
    "requests==2.32.5",
    "python-dotenv==1.2.1",
    "pydantic==2.12.5",
    "tqdm==4.67.1",
    "colorlog==6.10.1",
    "proglog==0.1.12",
    "yt-dlp>=2024.12.23",
    
    # Testes
    "pytest==9.0.2",
]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu124" }
torchaudio = { index = "pytorch-cu124" }
torchvision = { index = "pytorch-cu124" }
